--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ a {
     text-decoration: none !important;
 }
 
-#about-anchor, #projects-anchor, #blog-anchor, #contact-anchor {
+#about, #projects, #blog, #contact {
     visibility: visible;
     display: block;
     height: 0px;
@@ -155,6 +155,20 @@ li {
     100% {
         left: 0;
         width: 100%;
+    }
+}
+
+.blinking-cursor {
+    animation: 1s blink step-end infinite;
+    font-weight: bold;
+}
+
+@keyframes blink {
+    from, to {
+        color: transparent;
+    }
+    50% {
+        color: black;
     }
 }
 
@@ -322,7 +336,7 @@ li {
 
 /**************************************************************************************************************************/
 
-#projects {
+#projects-section {
     overflow: auto;
     background-color: #1F2833;
 }
@@ -386,13 +400,17 @@ li {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
+.blog-thumb-img {
+    width: 286px;
+}
+
 /**************************************************************************************************************************/
 
 /* CONTACT SECTION */
 
 /**************************************************************************************************************************/
 
-#contact {
+#contact-section {
     overflow: auto;
     background-color: #1F2833;
 }
@@ -537,6 +555,9 @@ input, textarea {
     #contact-form {
         width: 85%;
         align-items: center;
+    }
+    #contact-main-content-container {
+        /* padding: 30px 0; */
     }
 }
 
