#fix safari bug and automate active navbar links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
 
                 <!-- ABOUT SECTION -->
                 <div id="about"></div>
-                <section class="">
+                <section id="about-section" class="">
                         <h1 class="page-section-heading blk">About</h1>
                         <hr class="section-hr blk" data-aos="zoom-in">
                         <div id="about-main-content-container" class="">
@@ -125,7 +125,7 @@
 
                 <!-- BLOG SECTION -->
                 <div id="blog"></div>
-                <section class="">
+                <section id="blog-section" class="">
                         <h1 class="page-section-heading blk">Blog</h1>
                         <hr class="section-hr blk" data-aos="zoom-in">
                         <div id="blog-main-content-container" class="">
