--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ html {
 * {
     margin: 0 0;
     padding: 0;
+    -webkit-box-sizing: border-box !important;
     box-sizing: border-box !important;
 }
 
@@ -68,6 +69,7 @@ a {
     display: inline-block;
     font-size: 14px;
     -webkit-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
     border-radius: 5px;
@@ -98,7 +100,12 @@ h1 {
 
 section {
     min-height: calc(100vh - 50px);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 
@@ -117,18 +124,32 @@ li {
 /**************************************************************************************************************************/
 
 #background-pic-container {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../images/bg-mountain-sm.jpg);
+    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/bg-mountain-sm.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/bg-mountain-sm.jpg);
     background-size: cover;
     width: 100%;
     height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
 #home-msg-first-row, #home-msg-second-row {
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -147,8 +168,16 @@ li {
     font-size: 35px;
     background-color: #949494;
     position: absolute;
+    -webkit-animation: slide .05s forwards;
     animation: slide .05s forwards;
     left: -100%;
+}
+
+@-webkit-keyframes slide {
+    100% {
+        left: 0;
+        width: 100%;
+    }
 }
 
 @keyframes slide {
@@ -159,8 +188,18 @@ li {
 }
 
 .blinking-cursor {
+    -webkit-animation: 1s blink step-end infinite;
     animation: 1s blink step-end infinite;
     font-weight: bold;
+}
+
+@-webkit-keyframes blink {
+    from, to {
+        color: transparent;
+    }
+    50% {
+        color: black;
+    }
 }
 
 @keyframes blink {
@@ -183,6 +222,7 @@ li {
 }
 
 #navbar {
+    -webkit-box-shadow: 0 0.5rem 1rem #00000026;
     box-shadow: 0 0.5rem 1rem #00000026;
     background-color: #0B0C10;
     overflow: hidden;
@@ -216,7 +256,12 @@ li {
 }
 
 #mobileNavLinks {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     height: calc(50vh - 50px);
     width: 100%;
@@ -227,6 +272,8 @@ li {
 }
 
 #mobileNavLinks li {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
     /* align-items: center;
     justify-content: center; */
@@ -237,19 +284,29 @@ li {
     color: #66FCF1;
     height: 100%;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
 .openMobileNavLinks {
     top: 50px !important;
+    -webkit-transition: 300ms;
+    -o-transition: 300ms;
     transition: 300ms;
     /* -webkit-transition: 300ms; */
 }
 
 .closeMobileNavLinks {
     top: -50vh !important;
+    -webkit-transition: 300ms;
+    -o-transition: 300ms;
     transition: 300ms;
     /* -webkit-transition: 300ms; */
 }
@@ -261,10 +318,21 @@ li {
 /**************************************************************************************************************************/
 
 #about-main-content-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
 }
 
@@ -278,14 +346,23 @@ li {
     background-color: #1F2833;
     width: 70%;
     padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-flex-basis: 350px;
+    flex-basis: 350px;
     border-radius: 10px 10px 10px 10px;
+    -webkit-box-shadow: 0 4px 8px 0 #00000033;
     box-shadow: 0 4px 8px 0 #00000033;
 }
 
 #about-second-flex-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     width: 70%;
     margin-top: 20px;
@@ -295,6 +372,8 @@ li {
 #about-second-flex-container li {
     background-color: #1F2833;
     padding: 10px;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
     margin: 0 10px;
     border-radius: 10px;
@@ -307,10 +386,20 @@ li {
 
 #about-para-flex-container {
     padding: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-preferred-size: 500px;
     flex-basis: 500px;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
 }
 
@@ -323,6 +412,7 @@ li {
     border-radius: 10px 0 0 10px;
     max-width: 200px;
     height: auto;
+    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -342,10 +432,21 @@ li {
 }
 
 #projects-main-content-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
 }
 
@@ -358,10 +459,19 @@ li {
 #blog {}
 
 #blog-main-content-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     /* flex-direction: column; */
 }
@@ -370,7 +480,10 @@ li {
     max-width: 286px;
     max-height: 400px;
     overflow: hidden;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -397,6 +510,7 @@ li {
 }
 
 .blog-card:hover {
+    -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -416,18 +530,38 @@ li {
 }
 
 #contact-main-content-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
 }
 
 #contact-form {
     width: 60%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
     align-items: flex-end;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -456,9 +590,18 @@ input, textarea {
 #footer {
     height: 120px;
     background-color: #0B0C10;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     text-align: center;
     color: #949494;
@@ -554,6 +697,8 @@ input, textarea {
     /* CONTACT */
     #contact-form {
         width: 85%;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
     }
     #contact-main-content-container {
