--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,9 +31,10 @@
                 </ul>
                 <br>
                 <h4>Project Updates</h4>
+                <h5>Hiya</h5>
                 <ul>
                     {% for post in site.categories.project-update %}
-                    <li><a href="{{ post.url }}">{{ post.title }} - {{ post.date | date_to_string }}</a></li>
+                    <li><a href="{{ post.url }}">{{ post.title | remove: "Project 'Hiya' - " }} - {{ post.date | date_to_string }}</a></li>
                     {% endfor %}
                 </ul>
             </div>
