Upload update #2 for Hiya

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,8 +81,8 @@
                                                                 ready to apply them in a new
                                                                 innovative workplace. I am excited about
                                                                 taking on a new career challenge in
-                                                                London. I invite you to check out the 
-                                                                blog and project spaces below for updates 
+                                                                London. I invite you to check out the
+                                                                blog and project spaces below for updates
                                                                 on what I'm currently working on.
                                                         </p>
                                                 </div>
@@ -144,10 +144,9 @@
                                 </div>
                                 {% elsif forloop.index == 2 %}
                                 <div class="blog-card border" data-aos="fade-up">
-                                        <img class="blog-thumb-img" src="../images/welcome.jpg" alt="Blog post image">
+                                        <img class="blog-thumb-img" src="../images/hiya.jpg" alt="Blog post image">
                                         <div class="blog-post-container">
                                                 <a href="{{ post.url }}">
-                                                        <!-- <a href="#"> -->
                                                         <h5>{{ post.title }}</h5>
                                                 </a>
                                                 <p>{{ post.excerpt | truncate: 90 }}</p>
@@ -156,7 +155,7 @@
                                 </div>
                                 {% else %}
                                 <div class="blog-card border" data-aos="fade-up">
-                                        <img class="blog-thumb-img" src="../images/download.svg" alt="Blog post image">
+                                        <img class="blog-thumb-img" src="../images/welcome.jpg" alt="Blog post image">
                                         <div class="blog-post-container">
                                                 <a href="{{ post.url }}">
                                                         <h5>{{ post.title }}</h5>
@@ -193,8 +192,10 @@
         <!-- FOOTER SECTION -->
         <footer id="footer" class="">
                 <div class="footer-icons">
-                        <a href="https://www.linkedin.com/in/fabian-tauriello" title="LinkedIn" class="" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
-                        <a href="https://github.com/FabianTauriello" title="GitHub" target="_blank" class=""><i class="fa fa-github fa-lg"></i></a>
+                        <a href="https://www.linkedin.com/in/fabian-tauriello" title="LinkedIn" class=""
+                                target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
+                        <a href="https://github.com/FabianTauriello" title="GitHub" target="_blank" class=""><i
+                                        class="fa fa-github fa-lg"></i></a>
                 </div>
                 <div class="footer-text">
                         <p class="">© Fabian Tauriello 2019</p>
