--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>{{ page.title }}</title>
+    <link rel="shortcut icon" type="image/png" href="../../../../images/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Abril+Fatface">
     <link rel="stylesheet" href="../../../../css/post.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +21,8 @@
         </div>
         <div id="sidebar" class="">
             <div id="sidebar-heading">
+                <a href="{{ site.url }}"><img id="home-link-img" src="../../../../images/favicon.png" alt="Home-link" title="Go to homepage"></a>
+                <span id="post-title-separator"></span>
                 <h3>Post History</h3>
             </div>
             <div id="sidebar-main">
