--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,11 @@ a {
     padding-bottom: 10px;
 }
 
+.flex-break {
+    flex-basis: 100%;
+    height: 0;
+}
+
 .section-hr {
     margin: 0 auto;
     border: 1.5px solid;
@@ -473,7 +478,7 @@ li {
     flex-grow: 1;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    /* flex-direction: column; */
+    margin-top: 8px;
 }
 
 .blog-card {
@@ -516,6 +521,10 @@ li {
 
 .blog-thumb-img {
     width: 286px;
+}
+
+#blog-button {
+    margin-bottom: -25px;
 }
 
 /**************************************************************************************************************************/
