--- a/css/post.css
+++ b/css/post.css
@@ -77,6 +77,15 @@
     line-height: 1.6;
 }
 
+#home-link-img {
+    width: 30px;
+}
+
+#post-title-separator {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 /**************************************************************************************************************************/
 
 /* MAIN CONTENT */
@@ -129,7 +138,7 @@
 }
 
 #main-content img {
-    max-width: 700px;
+    max-width: 800px;
 }
 
 .small-date-text {
@@ -153,6 +162,16 @@ pre {
     padding: 1em 1.5em;
     display: block;
     word-wrap: break-word;
+}
+
+blockquote {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 30px;
+    padding-left: 10px;
+    margin-right: 40px;
+    border-left: 3px solid #ccc;
 }
 
 /**************************************************************************************************************************/
