Upload update #4 for Hiya

--- a/css/post.css
+++ b/css/post.css
@@ -18,6 +18,8 @@
 
 /**************************************************************************************************************************/
 
+/* check https://codepen.io/keplerweb/pen/rGPObW for post history animation */
+
 #sidebar {
     position: fixed;
     left: 0;
