--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@
                 </ul>
                 <br>
                 <h4>Project Updates</h4>
-                <h5>Hiya</h5>
+                <h5><a target="_blank" href="https://github.com/FabianTauriello/Hiya-Android">Hiya</a></h5>
                 <ul>
                     {% for post in site.categories.project-update %}
                     <li><a href="{{ post.url }}">{{ post.title | remove: "Project 'Hiya' - " }} - {{ post.date | date_to_string }}</a></li>
